name:                coindesk-bpi
version:             0.1.0.0
synopsis:            Retrieves bitcoin price index from coindesk
license:             BSD3
license-file:        LICENSE.md
author:              Emily Backes
maintainer:          lucca@accela.net
copyright:           © 2017 Emily Backes
Category:            Tool
build-type:          Simple
cabal-version:       >=1.10

executable coindesk-bpi
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:     aeson,
                     base >=4.7 && < 5,
                     http-conduit,
                     text,
                     time,
                     unordered-containers

